--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="F:/program/java/other_libs/JabRef-2.10.jar"/>
-	<classpathentry kind="lib" path="F:/program/java/other_libs/javax.mail-1.5.0.jar"/>
-	<classpathentry kind="lib" path="F:/program/java/other_libs/jsoup-1.12.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/git/jabrefplug/lib/JabRef-2.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/git/jabrefplug/lib/javax.mail-1.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/git/jabrefplug/lib/jsoup-1.12.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
